--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+<style>
+@import url('https://fonts.googleapis.com/css?family=Lobster|Ubuntu');
+</style>
   <head>
 <title>Elana's photography-home</title>
 <aside class="NavSidebar">
