--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Lobster|Ubuntu');
-</style>
+<link href="https://fonts.googleapis.com/css?family=Lobster|Ubuntu" rel="stylesheet">
   <head>
 <title>Elana's photography-home</title>
 <aside class="NavSidebar">
