--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lobster|Ubuntu" rel="stylesheet">
   <head>
 <title>Elana's photography-home</title>
+<!--this is the top bar-->
 <aside class="NavSidebar">
   <nav>
     <h2 class="white">Pages</h2>
@@ -10,7 +11,9 @@
         <a class="big" href="./contact.html">Contact Me</a>
   </nav>
 </aside>
+
 <link href="./style.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
 <br/> <br/> <br/> <br/><br/><br/>
   <body class="index">
@@ -21,5 +24,10 @@
 </div>
 
   </body>
-
+  <!--this is the bottom bar-->
+  <aside class="SubSidebar">
+  <div class="w3-bar w3-black">
+  <div class="w3-bar-item w3-hover-green">Photos taken by Elana Zien</div>
+  </div>
+  </aside>
 </html>
