--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   <!--this is the bottom bar-->
   <aside class="SubSidebar">
   <div class="w3-bar w3-black">
-  <div class="w3-bar-item w3-hover-green">Photos taken by Elana Zien</div>
+  <div class="w3-bar-item w3-hover-green subtext">Photos taken by Elana Zien</div>
+  <div class="w3-bar-item w3-hover-red subtext">Website created by Samuel Zien</div>
   </div>
   </aside>
 </html>
