--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body class="index">
 
     <div id="introduction" class="boxed" style="background:#777777;">
-    <h1>Introduction</h1>
+    <h1 class="lobster">Introduction</h1>
 <p>This is a website for my photos.</p>
 </div>
 
