--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <br/>
 <button class="collapsible">Contact me</button>
 <div class="content" style="font-size:14px;">
-  <p>[input contact information, Elana]</p>
+  <p>input contact information, Elana</p>
 </div>
   </body>
   <!--this is the bottom bar-->
