--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         <a class="big" href="./photos.html">My Photos</a>
   </nav>
 </aside>
-
+<!--mobile sizing-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--just for search engines and stuff-->
+  <meta charset="UTF-8">
+  <meta name="description" content="Photography portfolio of Elana Zien">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript,photography,nature">
+<!--end of metadata-->
 <link href="./style.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
