--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<img class="imgbanner" src="./Images/jobbanner.png"></img>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
-		<marquee class="box" scrollmount="250">Sup, Choombas! Sup, Choombas! Sup, Choombas! Sup, Choombas! Sup, Choombas! Sup, Choombas!</marquee>
+		<marquee class="box" scrollmount="250"></marquee>
 	</head>
 	<body> 
 <br />
