Various Accessibility and scaling fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<html>
+<html lang="en">
 	<head>
 		<title>FixList</title>
-		<img class="imgbanner" src="./Images/jobbanner.png"></img>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
+		<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 		<marquee class="box" scrollmount="250"></marquee>
@@ -66,7 +68,7 @@
     </div>
 </div>
 <br><br>
-<img src="./Images/elflinesad.png" class="advert">
+<img src="./Images/elflinesad.png" alt="an advertisement for Elflines Online" class="advert">
 <div class="navbar">
 <a href="index.html">Home</a>
 <a href="./markets.html">Sales</a>
