--- a/markets.html
+++ b/markets.html
@@ -1,7 +1,9 @@
-<html>
+<html lang="en">
 	<head>
 		<title>Sales | FixList</title>
-		<img class="imgbanner" src="./Images/jobbanner.png"></img>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
+		<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
