--- a/markets.html
+++ b/markets.html
@@ -4,11 +4,12 @@
 		<title>Sales | FixList</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
-		<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>
+		<!--<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>-->
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body> 
+        <h1>FixList</h1>
 <br />
 <h1>Markets</h1>
 <a class="button" href="#modal1">Wizard's Mall of Oz <subtitle>Heywood, Mall, Restricted Market, Multiple Items</subtitle></a>
