--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<title>About | FixList</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
-		<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>
+		<!--<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>-->
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
