--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
-	<body> 
+	<body>
+        <h1>FixList</h1> 
 <br />
-<h1>Jobs Home</h1>
+<h2>Jobs</h2>
 <a class="button" href="#modal1">Looking for Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
 <div class="popup" id="modal1">
