--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body>
-        <h1>FixList</h1> 
+        <div class="navbar">
+            <a href="index.html">Home</a>
+            <a href="./markets.html">Sales</a>
+            <a href="./about.html">About</a>
+            </div>
+        <br>
+        <h1><strong>FixList</strong></h1> 
 <h2>Jobs</h2>
 <a class="button" href="#modal1">Looking for Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
@@ -69,10 +75,5 @@
 </div>
 <br><br>
 <img src="./Images/elflinesad.png" alt="an advertisement for Elflines Online" class="advert">
-<div class="navbar">
-<a href="index.html">Home</a>
-<a href="./markets.html">Sales</a>
-<a href="./about.html">About</a>
-</div>
 	</body>
 </html>
