--- a/markets.html
+++ b/markets.html
@@ -9,7 +9,13 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body> 
-        <h1>FixList</h1>
+        <div class="navbar">
+            <a href="index.html">Home</a>
+            <a href="./markets.html">Sales</a>
+            <a href="./about.html">About</a>
+            </div>
+        <br>
+        <h1><strong>FixList</strong></h1>
 <h2>Markets</h2>
 <a class="button" href="#modal1">Wizard's Mall of Oz <subtitle>Heywood, Mall, Restricted Market, Multiple Items</subtitle></a>
 
@@ -30,11 +36,6 @@
     </div>
 </div>
 <br>
-<h1> Buying and Selling </h1>
-<div class="navbar">
-<a href="index.html">Home</a>
-<a href="./markets.html">Sales</a>
-<a href="./about.html">About</a>
-</div>
+<h2>Buying and Selling</h2>
 	</body>
 </html>
