--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body> 
-		<div class="navbar">
-			<a href="index.html">Home</a>
-			<a href="./markets.html">Sales</a>
-			<a href="./about.html">About</a>
-			</div>
+		<nav class="navbar">
+            <a href="index.html">Home</a>
+            <a href="./markets.html">Sales</a>
+            <a href="./about.html">About</a>
+            <h1><strong>FixList</strong></h1> 
+        </nav>
 		<br>
-		<h1><strong>FixList</strong></h1>
 <h2>About FixList</h2>
 <article>
 <p>Fixlist is the premiere new service for fixers and everyone else alike! A website where anyone can post a job and you only pay when a job gets done. But really, Edgerunners pay nothing to use the site. It's all on your fixer.<br><br> As for GMs, we hope it sparks the imagination and gives your Cyberpunk RED campaigns a little more variety.</p>
