--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body>
-        <div class="navbar">
+        <section>
+        <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="./markets.html">Sales</a>
             <a href="./about.html">About</a>
-            </div>
+            <h1><strong>FixList</strong></h1> 
+        </nav>
+        </section>
         <br>
-        <h1><strong>FixList</strong></h1> 
+        <section class="contentbar">
 <h2>Jobs</h2>
 <a class="button" href="#modal1">Looking for Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
@@ -73,7 +76,11 @@
         <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
     </div>
 </div>
+</section>
 <br><br>
+<section class="contentbar">
 <img src="./Images/elflinesad.png" alt="an advertisement for Elflines Online" class="advert">
+<img src="./Images/crownbelow.jpg" alt="an advertisement for a drink" class="advert">
+</section>
 	</body>
 </html>
