--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>
         </section>
         <br>
+        <h2>Jobs</h2>
         <section class="contentbar">
-<h2>Jobs</h2>
 <a class="button" href="#modal1">Looking for Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
 <div class="popup" id="modal1">
@@ -70,6 +70,33 @@
 <a class="button" href="#modal6">Looking to Chrome Up <subtitle>Little China, Service, Indeterminate Pay - Fixer</subtitle></a>
 
 <div class="popup" id="modal6">
+    <a class="popup__overlay" href="#"></a>
+    <div class="popup__wrapper">
+        <a class="popup__close" href="#">X</a>
+        <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
+    </div>
+</div>
+<a class="button" href="#modal7">Placeholder <subtitle>Placeholder</subtitle></a>
+
+<div class="popup" id="modal7">
+    <a class="popup__overlay" href="#"></a>
+    <div class="popup__wrapper">
+        <a class="popup__close" href="#">X</a>
+        <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
+    </div>
+</div>
+<a class="button" href="#modal8">Placeholder <subtitle>Placeholder</subtitle></a>
+
+<div class="popup" id="modal8">
+    <a class="popup__overlay" href="#"></a>
+    <div class="popup__wrapper">
+        <a class="popup__close" href="#">X</a>
+        <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
+    </div>
+</div>
+<a class="button" href="#modal9">Placeholder <subtitle>Placeholder</subtitle></a>
+
+<div class="popup" id="modal9">
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
