--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<nav class="navbar">
             <a href="index.html">Home</a>
             <a href="./markets.html">Sales</a>
-            <a href="./about.html">About</a>
+            <a class="current-link" href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
         </nav>
 		<br>
