--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
         <section>
         <nav class="navbar">
-            <a href="index.html">Home</a>
+            <a class="current-link" href="index.html">Home</a>
             <a href="./markets.html">Sales</a>
             <a href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
