--- a/fixlist/about.html
+++ b/fixlist/about.html
@@ -14,6 +14,7 @@
             <a href="./markets.html">Sales</a>
             <a class="current-link" href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
+			<a id="return" href="../index.html">Main Site</a>
         </nav>
 		<br>
 <h2>About FixList</h2>
