--- a/fixlist/home.html
+++ b/fixlist/home.html
@@ -15,17 +15,19 @@
             <a href="./markets.html">Sales</a>
             <a href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
+            <a id="return" href="../index.html">Main Site</a>
         </nav>
         </section>
         <br>
         <h2>Jobs</h2>
         <section class="contentbar">
-<a class="button" href="#modal1">Looking for Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
+<a class="button" href="#modal1">Seeking Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
 <div class="popup" id="modal1">
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Location Not Set, 1000eb - Direct</subtitle></p>
         <p><b>[CONTACT FIRST, DIRECT]</b> Looking for security cameras, can't be traceable, hopefully cheap. Will pay up to <b>1000eb</b> for at least 3 cameras. Fine with stolen goods as long as you don't get caught.</p>
     </div>
 </div>
@@ -36,6 +38,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>The Glen, Low Intensity, 300eb - Direct</subtitle></p>
         <p><b>[FIRST CLAIM]</b>Need decorations for my new cargo crate. Preferably flat so they can hang on the wall. Paintings welcome, have up to <b>300eb</b>, paid to the first to bring me something. <b>[ATTACH:COORD]</b></p>
     </div>
 </div>
@@ -46,6 +49,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Combat Zone, 2000eb/Negotiable Pay - Direct</subtitle></p>
         <p><b>[FIRST CLAIM, DIRECT]</b> My employer is looking to negotiate a deal with some drug manufacturers headquartered in the Combat Zone. I'm not familiar with the area or quite intimidating enough on my own. Starting pay 2000 EuroBucks, but willing to negotiate depending on the size of crew. Meet in Jesse James' Kosher Deli Tomorrow.</p>
     </div>
 </div>
@@ -55,6 +59,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Old City Center, 2500eb - Fixer</subtitle></p>
         <p><b>[CONTACT FIRST, FIXER]</b> Some shitty ganger's been heading around the Old City Center trying to build a harem, and it's working. Plenty of the gangers have beef with the guy for a lot of reasons, so we've pooled. <b>2500eb</b> for whoever can kill him first, no real time crunch. Meet fixer in Totentantz.</p>
     </div>
 </div>
@@ -64,6 +69,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Badlands, Service, No Payment - Direct</subtitle></p>
         <p><b>[CONTACT FIRST, DIRECT]</b> Delivery plans fell through, the library needs some books sent to the Aldecaldos. Preferably soon, as they're returning fresh vegetables as reward.</p>
     </div>
 </div>
@@ -73,6 +79,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Little China, Service, Indeterminate Pay - Fixer</subtitle></p>
         <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
     </div>
 </div>
@@ -82,6 +89,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Placeholder</subtitle></p>
         <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
     </div>
 </div>
@@ -91,6 +99,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Placeholder</subtitle></p>
         <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
     </div>
 </div>
@@ -100,6 +109,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Placeholder</subtitle></p>
         <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
     </div>
 </div>
