--- a/fixlist/markets.html
+++ b/fixlist/markets.html
@@ -14,6 +14,7 @@
             <a class="current-link" href="./markets.html">Sales</a>
             <a href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
+            <a id="return" href="../index.html">Main Site</a>
         </nav>
         <br>
 <h2>Markets</h2>
