--- a/fixlist/home.html
+++ b/fixlist/home.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
 	</head>
 	<body>
-        <section>
         <nav class="navbar">
             <a class="current-link" href="./home.html">Home</a>
             <a href="./markets.html">Sales</a>
@@ -17,10 +16,10 @@
             <h1><strong>FixList</strong></h1> 
             <a id="return" href="../index.html">Main Site</a>
         </nav>
-        </section>
+        
         <br>
         <h2>Jobs</h2>
-        <section class="contentbar">
+        <section class="contentbar" id="listings">
 <a class="button" href="#modal1">Seeking Security Cameras <subtitle>Location Not Set, 1000eb - Direct</subtitle></a>
 
 <div class="popup" id="modal1">
