--- a/fixlist/markets.html
+++ b/fixlist/markets.html
@@ -24,6 +24,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Heywood, Mall, Restricted Market, Multiple Items</subtitle></p>
         <p><b>[WALK-IN, RESTRICTED]</b>A typical 2-floor mall(coordinates attached). Some areas by invite only. Stores in this mall: <br> <b>Save a Horse(Theme Strip Club), CHOO-2-U(Stall), Sanroo Weapons, Ron's Armor Repairs, Crates Crates Boxes, Kibbles 'n Bits, and more!</b></p>
     </div>
 </div>
@@ -33,6 +34,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Themed, Open Market, Fashion</subtitle></p>
         <p><b>[WALK-IN, OPEN]</b> A spooky vampire themed storefront, decorated to the nines. Full of gothic fashion and a few useful treats. Coordinates attached.</p>
     </div>
 </div>
@@ -42,6 +44,7 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
+        <p><subtitle>Heywood, Warehouse, Night Market, Multiple Items</subtitle></p>
         <p><b>[WALK-IN, RESTRICTED]</b>A typical 2-floor mall(coordinates attached). Some areas by invite only. Stores in this mall: <br> <b>Save a Horse(Theme Strip Club), CHOO-2-U(Stall), Sanroo Weapons, Ron's Armor Repairs, Crates Crates Boxes, Kibbles 'n Bits, and more!</b></p>
     </div>
 </div>
