--- a/fixlist/about.html
+++ b/fixlist/about.html
@@ -19,11 +19,11 @@
 		<br>
 <h2>About FixList</h2>
 <article>
-<p>Fixlist is the premiere new service for fixers and everyone else alike! A website where anyone can post a job and you only pay when a job gets done. But really, Edgerunners pay nothing to use the site. It's all on your fixer.<br><br> As for GMs, we hope it sparks the imagination and gives your Cyberpunk RED campaigns a little more variety.</p>
+<p>FixList is a tool to be used for planning and immersion in the TTRPG Cyberpunk RED. Players can look at a real site and contribute to campaign planning, or it can simply be a visual aid. As for GMs, we hope it sparks the imagination and gives your Cyberpunk RED campaigns a little more variety.</p>
 <h2>Using FixList</h2>
-<p>There are a few ways to use this site. It's impossible to prep missions that work for every group, so the missions are general prompts. In this vein, the recommended way to use them is to have your players pick a mission at the end of a session and prep it between sessions. Of course, the Night Markets are easier to improvise.</p>
+<p>There are a few ways to use this site. It's impossible to prep missions that work for every group, so the missions are general prompts. Some of them might include photos and art, eventually. In this vein, the recommended way to use them is to have your players pick a mission at the end of a session and prep it between sessions. Of course, the Night Markets are easier to improvise.</p>
 <h3>In The World</h3>
-<p>It doesn't make much sense for a website full of illegal goods and services to crop up on the regular citinet. But hey, it kind of has. There's some stoppers, mainly that the website isn't listed on search engines or DNS, so you have to connect directly. Other than that, plausible deniability all the way. The NCPD doesn't have the manpower to prove the website owner knows how illegal it gets, because the site is marketed as a solution for legal gigs and sales, like Craiglist in the days of old.</p>
+<p>Fixlist is the premiere new service for fixers and everyone else alike! A website where anyone can post a job and you only pay when a job gets done. But really, Edgerunners pay nothing to use the site. It's all on your fixer. </p><p>It doesn't make much sense for a website full of illegal goods and services to crop up on the regular citinet. But hey, it kind of has. There's some stoppers, mainly that the website isn't listed on search engines or DNS, so you have to connect directly. Other than that, plausible deniability all the way. The NCPD doesn't have the manpower to prove the website owner knows how illegal it gets, because the site is marketed as a solution for legal gigs and sales, like Craiglist in the days of old.</p>
 </article>
 	</body>
 </html>
