--- a/fixlist/markets.html
+++ b/fixlist/markets.html
@@ -44,8 +44,10 @@
     <a class="popup__overlay" href="#"></a>
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
-        <p><subtitle>Heywood, Warehouse, Night Market, Multiple Items</subtitle></p>
-        <p><b>[WALK-IN, RESTRICTED]</b>A typical 2-floor mall(coordinates attached). Some areas by invite only. Stores in this mall: <br> <b>Save a Horse(Theme Strip Club), CHOO-2-U(Stall), Sanroo Weapons, Ron's Armor Repairs, Crates Crates Boxes, Kibbles 'n Bits, and more!</b></p>
+        <p><subtitle><b>[INVITE ONLY]</b> Heywood, Warehouse, Night Market, Multiple Items</subtitle></p>
+        <p>A bozo Night Market run by the...interesting Nomad Honk Honk. Features a semi-random Night Market, new items, and 3 NPCs that help run the Market.</p>
+        <object data="Images/honkhonkmarket.pdf" type="application/pdf"></object>
+        <p>Want a copy? <a href="Images/honkhonkmarket.pdf">Download The PDF.</a></p>
     </div>
 </div>
 <br>
