--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Amity Z</title>
+    <title>Amity Z | Home</title>
 </head>
 <body>
     <section>
@@ -15,10 +15,19 @@
         </nav>
     </section>
     <br>
-        <h1><strong>Amity Z</strong></h1>
     </header>
     <main>
-        <h2>Under Construction! Jump to another project!</h2>
+       <span style="text-align: center;"> <br><h1>Under Construction!</h1>
+        <h1>Thanks for your patience!</h1> </span>  
+        <!--<h1><strong>About Me</strong></h1>
+        <h2>Amity Z</h2>
+        <section id="articles">
+            <h2>FAQ</h2>
+        <div class="contentbar">
+            <article><h3></h3><p></p></article>
+            <article><h3></h3></article>
+        </div>
+        </section> -->
     </main>
 </body>
 </html>
