--- a/index.html
+++ b/index.html
@@ -17,17 +17,36 @@
     <br>
     </header>
     <main>
-       <span style="text-align: center;"> <br><h1>Under Construction!</h1>
-        <h1>Thanks for your patience!</h1> </span>  
-        <!--<h1><strong>About Me</strong></h1>
-        <h2>Amity Z</h2>
+        <h1><strong>About Me</strong></h1>
+        <section id="about">
+        <h2>Amity Z<h3> (She/he/they)</h3></h2>
+        <p>Welcome to my website. Here I'll be keeping some basic professional information as well as some personal projects. If you're here for Cyberpunk RED content, you can make your way over to that on the top of the page.</p>
+        <p>I'm a Software Engineering major from Minnesota, minoring in Multimedia Communications. I've always been big into computers, and I've played around with programming them since I was in middle school. I also enjoy building and repairing computers. </p>
+        </section>  
         <section id="articles">
-            <h2>FAQ</h2>
+            <h2>Skills</h2>
         <div class="contentbar">
-            <article><h3></h3><p></p></article>
-            <article><h3></h3></article>
+            <article><h3>Programming languages</h3>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Java</li>
+                    <li>C</li>
+                    <li>Python 3</li>
+                    <li>Batch</li>
+            </ul></article>
+            <article><h3>Softwares</h3><ul>
+                <li>Adobe Audition, Illustrator, InDesign, Photoshop, Premiere, and Animate</li>
+                <li>Blender</li>
+                <li>Node.JS</li>
+                <li>Vim</li>
+                <li>PuTTy</li>
+                <li>IntelliJ, VS Code</li>
+                <li>Github & Git</li>
+            </ul></article>
         </div>
-        </section> -->
+        </section>
     </main>
 </body>
 </html>
