Restyle Index, Add content

--- a/index.html
+++ b/index.html
@@ -45,8 +45,19 @@
                 <li>IntelliJ, VS Code</li>
                 <li>Github & Git</li>
             </ul></article>
+            <article><h3>Systems</h3><ul>
+                <li>Linux Kernel</li>
+                <li>Ubuntu</li>
+                <li>OpenSUSE</li>
+                <li>Kali Linux</li>
+                <li>Windows</li>
+                <li>Mac</li>
+            </ul></article>
         </div>
         </section>
     </main>
+    <footer>
+        <p>Amity Zien, 2023</p>
+    </footer>
 </body>
 </html>
