--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Amity Z | Home</title>
+    <title>Amity Z</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a class="current-link" href="./index.html">Home</a>
-            <a href="./fixlist/home.html">Fixlist</a>
+            <a class="current-link" href="./index.html"><span data-descr="My homepage.">Home</span></a>
+            <a href="./fixlist/home.html"><span data-descr="A Cyberpunk RED homebrew repository to help with planning.">Fixlist</span></a>
         </nav>
     <br>
     </header>
@@ -28,18 +28,18 @@
         <div class="contentbar">
             <article><h3>Programming languages</h3>
                 <ul>
-                    <li>JavaScript</li>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>Java</li>
-                    <li>C</li>
-                    <li>Python 3</li>
+                    <li id="javascript">JavaScript</li>
+                    <li id="html">HTML5</li>
+                    <li id="css3">CSS3</li>
+                    <li id="java">Java</li>
+                    <li id="ccode">C</li>
+                    <li id="python3">Python 3</li>
                     <li>Batch</li>
             </ul></article>
             <article><h3>Softwares</h3><ul>
                 <li>Adobe Audition, Illustrator, InDesign, Photoshop, Premiere, and Animate</li>
                 <li>Blender</li>
-                <li>Node.JS</li>
+                <li id="nodejs">Node.JS</li>
                 <li>Vim</li>
                 <li>PuTTy</li>
                 <li>IntelliJ, VS Code</li>
