Coming Soon Banner
Fixlist home now has a coming soon banner.

--- a/fixlist/home.html
+++ b/fixlist/home.html
@@ -118,5 +118,6 @@
 <img src="./Images/elflinesad.png" alt="an advertisement for Elflines Online" class="advert">
 <img src="./Images/crownbelow.jpg" alt="an advertisement for a drink" class="advert">
 </section>
+<h3 style="align-self: center;">Coming Soon(hopefully)! React functionality. This page should, eventually, be able to populate from a random bank of missions.</h3>
 	</body>
 </html>
