--- a/fixlist/home.html
+++ b/fixlist/home.html
@@ -79,7 +79,7 @@
     <div class="popup__wrapper">
         <a class="popup__close" href="#">X</a>
         <p><subtitle>Little China, Service, Indeterminate Pay - Fixer</subtitle></p>
-        <p><b>[FIRST CLAIM, FIXER]</b> I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.<b>[ATTACH:CONTACT;KIRA_AKIRA]</b></p>
+        <p>I have some Tyger Claw clients looking to get some stylish new chrome and weapons, whatever you can find. Will pay based on what you can bring, scavved is fine. Must be working or fixed on-site, with a hefty bonus if you can install it when you bring it. Feel free to reach out, call if you want to meet. Or you can drop me a line at the Forlorn Hope...or Silver Dragon, if you're willing to buy me a drink.</p>
     </div>
 </div>
 <!--<a class="button" href="#modal7">Placeholder <subtitle>Placeholder</subtitle></a>
