--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <h1><strong>About Me</strong></h1>
         <hr>
         <section id="about">
-        <h2>Amity Z<h3> (She/he/they)</h3></h2>
+        <h2>Samuel "Amity" Zien <h3>(She/he/they)</h3></h2>
         <p>Welcome to my website. Here I'll be keeping some basic professional information as well as some personal projects. If you're here for Cyberpunk RED content, you can make your way over to that on the top of the page.</p>
-        <p>I'm a Software Engineering major from Minnesota, minoring in Multimedia Communications. I've always been big into computers, and I've played around with programming them since I was in middle school. I also enjoy building and repairing computers. </p>
+        <p>I'm a Software Engineering major from Minnesota, minoring in Multimedia Communications. I've always been big into computers, and I've played around with programming them since I was in middle school. I also enjoy building and repairing computers.</p>
+        <p>I'm looking for a career that would contain a mix of these interests, in IT or working with server backends. I am also interested in low-level programming such as embedded solutions or firmware. If you're looking for someone for such a project, please reach out!</p>
         </section>  
         <section id="articles">
             <h2>Skills</h2>
@@ -34,9 +35,11 @@
                     <li id="java">Java</li>
                     <li id="ccode">C</li>
                     <li id="python3">Python 3</li>
-                    <li>Batch</li>
-            </ul></article>
-            <article><h3>Softwares</h3><ul>
+                    <li>Batch and Bash scripting</li>
+                </ul>
+            </article>
+            <article><h3>Softwares</h3>
+            <ul>
                 <li>Adobe Audition, Illustrator, InDesign, Photoshop, Premiere, and Animate</li>
                 <li>Blender</li>
                 <li id="nodejs">Node.JS</li>
@@ -45,14 +48,14 @@
                 <li>IntelliJ, VS Code</li>
                 <li>Github & Git</li>
             </ul></article>
-            <article><h3>Systems</h3><ul>
-                <li>Linux Kernel</li>
-                <li>Ubuntu</li>
-                <li>OpenSUSE</li>
-                <li>Kali Linux</li>
-                <li>Windows</li>
-                <li>Mac</li>
-            </ul></article>
+            <article><h3>Systems</h3>
+            <ul>
+                <li>Linux</li> 
+                <li>Unix</li>
+                <li>Windows XP - 11</li>
+                <li>MacOS/OSX</li>
+            </ul>
+            </article>
         </div>
         </section>
     </main>
