--- a/fixlist/home.html
+++ b/fixlist/home.html
@@ -7,6 +7,7 @@
 		<!--<img class="imgbanner" src="./Images/jobbanner.png" alt="FixList Banner"></img>-->
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
+        <script src="./modal.js"></script>
 	</head>
 	<body>
         <nav class="navbar">
@@ -118,6 +119,5 @@
 <img src="./Images/elflinesad.png" alt="an advertisement for Elflines Online" class="advert">
 <img src="./Images/crownbelow.jpg" alt="an advertisement for a drink" class="advert">
 </section>
-<h3 style="align-self: center;">Coming Soon(hopefully)! React functionality. This page should, eventually, be able to populate from a random bank of missions.</h3>
 	</body>
 </html>
