Content and Body Height Units
Content updates and changes to Body Height Units for later development.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <li id="javascript">JavaScript</li>
                     <li id="html">HTML5</li>
                     <li id="css3">CSS3</li>
-                    <li id="java">Java</li>
-                    <li id="ccode">C</li>
+                    <li id="java">Object-Oriented Java</li>
+                    <li id="ccode">Object-Oriented C</li>
                     <li id="python3">Python 3</li>
                     <li>Batch and Bash scripting</li>
                 </ul>
