--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     <main>
         <h1><strong>About Me</strong></h1>
         <hr>
+        <!--Top Of Content About Me-->
         <section id="about">
         <h2>Samuel "Amity" Zien <h3>(She/he/they)</h3></h2>
         <p>Welcome to my website. Here I'll be keeping some basic professional information as well as some personal projects. If you're here for Cyberpunk RED content, you can make your way over to that on the top of the page.</p>
         <p>I'm a Software Engineering major from Minnesota, minoring in Multimedia Communications. I've always been big into computers, and I've played around with programming them since I was in middle school. I also enjoy building and repairing computers.</p>
         <p>I'm looking for a career that would contain a mix of these interests, in IT or working with server backends. I am also interested in low-level programming such as embedded solutions or firmware. If you're looking for someone for such a project, please reach out!</p>
         </section>  
+        <!--End of about me area-->
+        <!--This Section Contains Skills in a List-->
         <section id="articles">
             <h2>Skills</h2>
             <hr>
@@ -58,6 +61,7 @@
             </article>
         </div>
         </section>
+        <!--End of the skills list section-->
     </main>
     <footer>
         <p>Amity Zien, 2023</p>
