--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <nav class="navbar">
             <a class="current-link" href="./index.html"><span data-descr="My homepage.">Home</span></a>
-            <a href="./fixlist/home.html"><span data-descr="A Cyberpunk RED homebrew repository to help with planning.">Fixlist</span></a>
         </nav>
     <br>
     </header>
@@ -39,6 +38,8 @@
                     <li id="ccode">Object-Oriented C</li>
                     <li id="python3">Python 3</li>
                     <li>Batch and Bash scripting</li>
+                    <li id="mysql">MySQL</li>
+                    <li id="php">PHP</li>
                 </ul>
             </article>
             <article><h3>Softwares</h3>
@@ -48,7 +49,7 @@
                 <li id="nodejs">Node.JS</li>
                 <li>Vim</li>
                 <li>PuTTy</li>
-                <li>IntelliJ, VS Code</li>
+                <li>IntelliJ, VS Code, Eclipse</li>
                 <li>Github & Git</li>
             </ul></article>
             <article><h3>Systems</h3>
