--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         </section>
         <!--End of the skills list section-->
     </main>
-    <footer>
+   <!--<footer>
         <p>Amity Zien, 2023</p>
-    </footer>
+    </footer> 
+    No Useful Information here at the moment. -->
 </body>
 </html>
