--- a/fixlist/markets.html
+++ b/fixlist/markets.html
@@ -10,7 +10,7 @@
 	</head>
 	<body> 
         <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="./home.php">Home</a>
             <a class="current-link" href="./markets.html">Sales</a>
             <a href="./about.html">About</a>
             <h1><strong>FixList</strong></h1> 
