Content Updates Jan 2025

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Amity Z</title>
+    <title>Samuel Zien</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         <hr>
         <!--Top Of Content About Me-->
         <section id="about">
-        <h2>Samuel "Amity" Zien <h3>(She/he/they)</h3></h2>
+        <h2>Samuel Zien <h3>(She/he/they)</h3></h2>
         <p>Welcome to my website. Here I'll be keeping some basic professional information as well as some personal projects. If you're here for Cyberpunk RED content, you can make your way over to that on the top of the page.</p>
         <p>I'm a Software Engineering major from Minnesota, minoring in Multimedia Communications. I've always been big into computers, and I've played around with programming them since I was in middle school. I also enjoy building and repairing computers.</p>
         <p>I'm looking for a career that would contain a mix of these interests, in IT or working with server backends. I am also interested in low-level programming such as embedded solutions or firmware. If you're looking for someone for such a project, please reach out!</p>
